TFP-6069 lovhjemler på uttaksperiode kommer som set fra fpsak (#2679)